--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
-    "@astrojs/svelte": "^5.4.0",
+    "@astrojs/svelte": "^5.6.0",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.8.6",
+    "cloudinary": "^2.2.0",
     "svelte": "^4.2.17",
     "svelte-file-dropzone": "^2.0.7",
     "tailwindcss": "^3.4.3",
